--- a/templates/test_list_institute.html
+++ b/templates/test_list_institute.html
@@ -73,9 +73,9 @@
                     </div>
                     <div class="w-100"></div>
                     <div class="col">
-                      <button class="btn btn-sm btn-outline-warning">
+                      <!-- <button class="btn btn-sm btn-outline-warning">
                         Extened 5min for entry
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
@@ -202,9 +202,9 @@
                     </div>
                     <div class="w-100"></div>
                     <div class="col">
-                      <button class="btn btn-sm btn-outline-warning">
+                      <!-- <button class="btn btn-sm btn-outline-warning">
                         Extened 5min for entry
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
