--- a/templates/nav_institute.html
+++ b/templates/nav_institute.html
@@ -34,9 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/test/i/test-list">Test</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/test/i/test-list">Results</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="/i/student-list">Students</a>
+        </li>
       </ul>
       <a class="btn btn-primary" href="/test/i/create-test">
         Create Test
