--- a/templates/test_list_institute.html
+++ b/templates/test_list_institute.html
@@ -156,10 +156,9 @@
               <a class="col card-link" data-toggle="collapse" href="#test{{test.test.id}}">
                 {{test.test.title}}
               </a>
-              <div class="col-auto ml-auto">
+              <!-- <div class="col-auto ml-auto">
                 <button class="btn btn-primary btn-sm px-4">Edit</button>
-                <!-- starts at 12:00:00 -->
-              </div>
+              </div> -->
             </div>
             <!-- </a> -->
           </div>
