--- a/templates/create_test_select_questions.html
+++ b/templates/create_test_select_questions.html
@@ -58,10 +58,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/test/test-list">Test</a>
+          <a class="nav-link" href="/test/i/test-list">Test</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/test/test-list">Results</a>
+          <a class="nav-link" href="/i/student-list">Students</a>
         </li>
       </ul>
     </div>
