--- a/templates/test_list.html
+++ b/templates/test_list.html
@@ -21,7 +21,7 @@
               </td>
               <td>{{test.no_of_questions}}</td>
               <td>
-                <a class="btn btn-primary btn-sm" href="/test/{{test.id}}">
+                <a class="btn btn-primary btn-sm" href="/test/instructions/{{test.id}}">
                   Start Test
                 </a>
               </td>
