--- a/templates/login.html
+++ b/templates/login.html
@@ -16,17 +16,46 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      background-image: url("/uploads/images/background/background.jpeg");
+      background-color: #cccccc;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .log-in-panel {
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="row mt-3 justify-content-center">
-      <div class="col-suto">
-        <h2>MITM Tests</h2>
+  <div class="container pb-5 mb-5">
+    <div class="row mt-3 justify-content-between">
+      <div class="col-auto text-light text-center d-none d-lg-block">
+        <h4>CET Code: 158</h4>
+      </div>
+      <div class="col-auto text-light text-center">
+        <h2>MITM, CET Mock Tests</h2>
+      </div>
+      <div class="col-auto text-light text-center d-none d-lg-block">
+        <h4>COMEDK Code: E078</h4>
       </div>
     </div>
-    <div class="row mt-2 justify-content-center">
-      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10 mx-2 p-3 border rounded">
+    <div class="d-lg-none">
+      <div class="row justify-content-between">
+        <div class="col-auto text-light text-center">
+          <h4>CET Code: 158</h4>
+        </div>
+        <div class="col-auto text-light text-center">
+          <h4>CET Code: 158</h4>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-2 mb-5 pb-5 justify-content-center">
+      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10 mx-2 p-3 border rounded log-in-panel">
         <div class="text-center border border-top-0 border-right-0 border-left-0 mb-2">
           <h5>Log-In</h5>
         </div>
@@ -52,7 +81,11 @@
             <div><small class="text-danger">Invalid Password</small></div>
             {% endif %}
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary mb-1">Submit</button>
+          <div class="w-100"></div>
+          <small>
+            <a href="/register">Register here</a>
+          </small>
         </form>
       </div>
     </div>
