Cleared html bug

--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
           <h4>CET Code: 158</h4>
         </div>
         <div class="col-auto text-light text-center">
-          <h4>CET Code: 158</h4>
+          <h4>COMEDK Code: E078</h4>
         </div>
       </div>
     </div>
