--- a/templates/register.html
+++ b/templates/register.html
@@ -64,7 +64,7 @@
           <h4>CET Code: 158</h4>
         </div>
         <div class="col-auto text-light">
-          <h4>CET Code: 158</h4>
+          <h4>COMEDK Code: E078</h4>
         </div>
       </div>
     </div>
