--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
         <h4>CET Code: 158</h4>
       </div>
       <div class="col-auto text-light text-center">
-        <h2>MITM, CET Mock Tests</h2>
+        <h2>MITM, CET Mock Test</h2>
       </div>
       <div class="col-auto text-light text-center d-none d-lg-block">
         <h4>COMEDK Code: E078</h4>
