made backgroung image repeate

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     body {
       background-image: url("/uploads/images/background/background.jpeg");
       background-color: #cccccc;
-      background-repeat: no-repeat;
+      /* background-repeat: no-repeat; */
       background-size: cover;
     }
 
