--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
     body {
       background-image: url("/uploads/images/background/background.jpeg");
       background-color: #cccccc;
-      background-repeat: no-repeat;
+      /* background-repeat: no-repeat; */
       background-size: cover;
     }
 
