phone number validation

--- a/templates/nav_student.html
+++ b/templates/nav_student.html
@@ -41,7 +41,7 @@
       <ul class="navbar-nav">
         <li class="nav-item dropdown dropleft">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            {{student.name}}
+            {{student.reg_no}} | {{student.name}}
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/log-out">Log-Out</a>
