added heroku db config

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
     body {
       background-image: url("/uploads/images/background/background.jpeg");
       background-color: #cccccc;
+      background-position: center center;
       /* background-repeat: no-repeat; */
       background-size: cover;
     }
