--- a/templates/login.html
+++ b/templates/login.html
@@ -33,29 +33,91 @@
 </head>
 
 <body>
-  <div class="container pb-5 mb-5">
-    <div class="row mt-3 justify-content-between">
+  <!-- <div class="row mt-3 justify-content-between">
       <div class="col-auto text-light text-center d-none d-lg-block">
-        <h4>CET Code: 158</h4>
+        <h5>CET Code: E-158</h5>
       </div>
       <div class="col-auto text-light text-center">
         <h2>MITM, CET Mock Test</h2>
       </div>
       <div class="col-auto text-light text-center d-none d-lg-block">
-        <h4>COMEDK Code: E078</h4>
+        <h5>COMEDK Code: E-078</h5>
       </div>
     </div>
     <div class="d-lg-none">
       <div class="row justify-content-between">
         <div class="col-auto text-light text-center">
-          <h4>CET Code: 158</h4>
+          <h5>CET Code: E-158</h5>
         </div>
         <div class="col-auto text-light text-center">
-          <h4>COMEDK Code: E078</h4>
+          <h5>COMEDK Code: E-078</h5>
+        </div>
+      </div>
+    </div> -->
+  <div class="log-in-panel">
+    <div class="d-lg-none">
+      <div class="row mx-1 pt-2 justify-content-around text-white border border-right-0 border-left-0 border-top-0">
+        <div class="col-auto">
+          <h4>MIT MYSORE</h4>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-auto">
+          <h5>CET Code: E-158</h5>
+        </div>
+        <div class="col-auto">
+          <h5>COMEDK Code: E-078</h5>
+        </div>
+      </div>
+      <div class="row mx-1 justify-content-around text-white border border-right-0 border-left-0 border-top-0">
+        <div class="col-auto">
+          <h4>MIT THANDAVAPURA</h4>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-auto">
+          <h5>CET Code: E-258</h5>
+        </div>
+        <div class="col-auto">
+          <h5>COMEDK Code: E-078</h5>
         </div>
       </div>
     </div>
-    <div class="row mt-2 mb-5 pb-5 justify-content-center">
+    <div
+      class="row pt-2 px-1 mx-1 justify-content-between text-white text-center border border-right-0 border-left-0 border-top-0">
+      <div class="col d-none d-lg-block">
+        <div class="row justify-content-between">
+          <div class="col">
+            <h4>MIT MYSORE</h4>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <h5>CET Code: E-158</h5>
+          </div>
+          <div class="col">
+            <h5>COMEDK Code: E-078</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h2>CET Mock Test</h2>
+      </div>
+      <div class="col d-none d-lg-block">
+        <div class="row justify-content-between">
+          <div class="col">
+            <h4>MIT THANDAVAPURA</h4>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <h5>CET Code: E-258</h5>
+          </div>
+          <div class="col">
+            <h5>COMEDK Code: E-078</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row mt-3 mb-5 pb-3 justify-content-center">
       <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10 mx-2 p-3 border rounded log-in-panel">
         <div class="text-center border border-top-0 border-right-0 border-left-0 mb-2">
           <h5>Log-In</h5>
@@ -64,17 +126,18 @@
         <form action="/log-in" method="POST">
           {% csrf_token %}
           <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" placeholder="Enter email" name="email" id="email"
-              value="{% if email %}{{email}}{% endif %}" required />
+            <label for="email">Phone Number *</label>
+            <input type="tel" class="form-control" placeholder="Enter Phone Number" name="phone_number" id="phone"
+              value="{% if email %}{{email}}{% endif %}" pattern="[5-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]"
+              required />
             {% if isEmailInvalid %}
             <div>
-              <small class="text-danger">Invalid Email, <a href="/register">register</a></small>
+              <small class="text-danger">Invalid Phone number, <a href="/register">register</a></small>
             </div>
             {% endif %}
           </div>
           <div class="form-group">
-            <label for="pwd">Password</label>
+            <label for="pwd">Password *</label>
             <input type="password" class="form-control" placeholder="Enter password" name="password" id="pwd"
               required />
 
