--- a/templates/nav_institute.html
+++ b/templates/nav_institute.html
@@ -37,6 +37,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/i/student-list">Students</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/test/i/question-list">Questions</a>
+        </li>
       </ul>
       <a class="btn btn-primary" href="/test/i/create-test">
         Create Test
