--- a/templates/nav_student.html
+++ b/templates/nav_student.html
@@ -45,11 +45,39 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/log-out">Log-Out</a>
+            <a class="dropdown-item" data-toggle="modal" data-target="#myModal">Profile</a>
           </div>
         </li>
       </ul>
     </div>
   </nav>
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Details</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          Username: {{student.name}}<br>
+          phone: {{student.phone_number}}<br>
+          Email: {{student.email}}<br>
+          CET no.: {{student.reg_no}}<br>
+          district: {{student.preffered_branch}}
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
   {% block content %} {% endblock %}
 </body>
 
