--- a/templates/register.html
+++ b/templates/register.html
@@ -47,8 +47,70 @@
 </head>
 
 <body>
+  <div class="register-panel">
+    <div class="d-lg-none">
+      <div class="row mx-1 pt-2 justify-content-around text-white border border-right-0 border-left-0 border-top-0">
+        <div class="col-auto">
+          <h4>MIT MYSORE</h4>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-auto">
+          <h5>CET Code: E-158</h5>
+        </div>
+        <div class="col-auto">
+          <h5>COMEDK Code: E-078</h5>
+        </div>
+      </div>
+      <div class="row mx-1 justify-content-around text-white border border-right-0 border-left-0 border-top-0">
+        <div class="col-auto">
+          <h4>MIT THANDAVAPURA</h4>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-auto">
+          <h5>CET Code: E-258</h5>
+        </div>
+        <div class="col-auto">
+          <h5>COMEDK Code: E-078</h5>
+        </div>
+      </div>
+    </div>
+    <div
+      class="row pt-2 px-1 mx-1 justify-content-between text-white text-center border border-right-0 border-left-0 border-top-0">
+      <div class="col d-none d-lg-block">
+        <div class="row justify-content-between">
+          <div class="col">
+            <h4>MIT MYSORE</h4>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <h5>CET Code: E-158</h5>
+          </div>
+          <div class="col">
+            <h5>COMEDK Code: E-078</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h2>CET Mock Test</h2>
+      </div>
+      <div class="col d-none d-lg-block">
+        <div class="row justify-content-between">
+          <div class="col">
+            <h4>MIT THANDAVAPURA</h4>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <h5>CET Code: E-258</h5>
+          </div>
+          <div class="col">
+            <h5>COMEDK Code: E-078</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
-    <div class="row mt-3 justify-content-between">
+    <!-- <div class="row mt-3 justify-content-between">
       <div class="col-auto text-light text-center d-none d-lg-block">
         <h4>CET Code: 158</h4>
       </div>
@@ -68,7 +130,7 @@
           <h4>COMEDK Code: E078</h4>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="row my-2 justify-content-center">
       <div class="col-lg-6 col-md-7 col-sm-8 col-xs-10 mx-2 p-3 border rounded register-panel">
         <div class="text-center border border-top-0 border-right-0 border-left-0 mb-2">
@@ -78,17 +140,7 @@
         <form action="/register" method="POST">
           {% csrf_token %}
           <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" placeholder="Enter email" name="email" id="email"
-              value="{% if email %}{{email}}{% endif %}" required />
-            {% if email_exists %}
-            <div>
-              <small class="text-danger">Email already exists, <a href="/log-in">log-in</a></small>
-            </div>
-            {% endif %}
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
+            <label for="phone">Phone Number *</label>
             <input type="tel" class="form-control" placeholder="Enter Phone Number" name="phone_number" id="phone"
               value="{% if phone_number %}{{phone_number}}{% endif %}"
               pattern="[5-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]" required />
@@ -99,9 +151,19 @@
             {% endif %}
           </div>
           <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" placeholder="Enter name" name="name" id="name"
+            <label for="name">User Name *</label>
+            <input type="text" class="form-control" placeholder="Enter Username" name="name" id="name"
               value="{% if name %}{{name}}{% endif %}" required />
+          </div>
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" placeholder="Enter email" name="email" id="email"
+              value="{% if email %}{{email}}{% endif %}" />
+            {% if email_exists %}
+            <div>
+              <small class="text-danger">Email already exists, <a href="/log-in">log-in</a></small>
+            </div>
+            {% endif %}
           </div>
           <div class="form-group">
             <label for="reg_number">CET No.</label>
@@ -109,25 +171,22 @@
               value="{% if reg_no %}{{reg_no}}{% endif %}" id="reg_number" />
           </div>
           <div class="form-group">
-            <label for="pwd">Password</label>
+            <label for="pwd">Password *</label>
             <input oninput="confirmPassword()" type="password" class="form-control" placeholder="Enter password"
               name="password" id="pwd" required />
           </div>
           <div class="form-group">
-            <label for="confirm_pwd">Confirm Password</label>
+            <label for="confirm_pwd">Confirm Password *</label>
             <input oninput="confirmPassword()" type="password" class="form-control" placeholder="Confirm password"
               name="password" id="confirm_pwd" required />
             <div class="text-danger" id="confirm_pwd_text"></div>
           </div>
+          <input type="hidden" class="form-control" placeholder="Enter PUC college you studied" name="puc_college"
+            value="{% if puc_college %}{{puc_college}}{% endif %}" id="puc_college" />
           <div class="form-group">
-            <label for="puc_college">PUC College</label>
-            <input type="text" class="form-control" placeholder="Enter PUC college you studied" name="puc_college"
-              value="{% if puc_college %}{{puc_college}}{% endif %}" id="puc_college" required />
-          </div>
-          <div class="form-group">
-            <label for="preffered_branch">Preffered Branch in Engineering</label>
-            <input type="text" class="form-control" placeholder="Enter Preffered Branch" name="preffered_branch"
-              value="{% if preffered_branch %}{{preffered_branch}}{% endif %}" id="preffered_branch" required />
+            <label for="preffered_branch">District</label>
+            <input type="text" class="form-control" placeholder="Enter District" name="preffered_branch"
+              value="{% if preffered_branch %}{{preffered_branch}}{% endif %}" id="preffered_branch" />
           </div>
           <!-- <div class="form-group">
               <label for="institute_code">Institute Code</label>
