--- a/templates/students.html
+++ b/templates/students.html
@@ -7,21 +7,19 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Reg no</th>
-                            <th>Email</th>
                             <th>Phone</th>
-                            <th>PUC College</th>
-                            <th>Preffred Branch</th>
+                            <th>Email</th>
+                            <th>Reg no</th>
+                            <th>District</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for student in students %}
                         <tr>
                             <td>{{student.name}}</td>
-                            <td>{{student.reg_no}}</td>
-                            <td>{{student.email}}</td>
                             <td>{{student.phone_number}}</td>
-                            <td>{{student.puc_college}}</td>
+                            <td>{{student.email}}</td>
+                            <td>{{student.reg_no}}</td>
                             <td>{{student.preffered_branch}}</td>
                         </tr>
                         {% endfor %}
