Made some html chenges.
added db.sqlite3 to gitignore

--- a/templates/register.html
+++ b/templates/register.html
@@ -160,8 +160,8 @@
             {% endif %}
           </div>
           <div class="form-group">
-            <label for="reg_number">CET No.</label>
-            <input type="text" class="form-control" placeholder="Enter CET No." name="reg_no"
+            <label for="reg_number">CET No. / PUC Reg. No.</label>
+            <input type="text" class="form-control" placeholder="Enter CET No. / PUC Reg. No." name="reg_no"
               value="{% if reg_no %}{{reg_no}}{% endif %}" id="reg_number" />
           </div>
           <div class="form-group">
