--- a/templates/nav_student.html
+++ b/templates/nav_student.html
@@ -16,6 +16,20 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script>
+    function confirmPassword() {
+      pwd_element = document.getElementById("pwd");
+      confirm_pwd_element = document.getElementById("confirm_pwd");
+      if (pwd_element.value == confirm_pwd_element.value) {
+        document.getElementById("submit_button").disabled = false;
+        document.getElementById("confirm_pwd_text").innerHTML = "";
+      }
+      if (pwd_element.value != confirm_pwd_element.value) {
+        document.getElementById("submit_button").disabled = true;
+        document.getElementById("confirm_pwd_text").innerHTML = "Doesn't match";
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -46,6 +60,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/log-out">Log-Out</a>
             <a class="dropdown-item" data-toggle="modal" data-target="#myModal">Profile</a>
+            <a class="dropdown-item" data-toggle="modal" data-target="#myModal1">Change Password</a>
           </div>
         </li>
       </ul>
@@ -75,6 +90,43 @@
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
 
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="myModal1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form action="/change-password" method="POST">
+
+          {% csrf_token %}
+          <!-- Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Change Password</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+
+          <!-- Modal body -->
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="pwd">New Password *</label>
+              <input oninput="confirmPassword()" type="password" class="form-control" placeholder="Enter password"
+                name="password" id="pwd" required />
+            </div>
+            <div class="form-group">
+              <label for="confirm_pwd">Confirm Password *</label>
+              <input oninput="confirmPassword()" type="password" class="form-control" placeholder="Confirm password"
+                name="password" id="confirm_pwd" required />
+              <div class="text-danger" id="confirm_pwd_text"></div>
+            </div>
+          </div>
+
+          <!-- Modal footer -->
+          <div class="modal-footer">
+            <button id="submit_button" type="submit" class="btn btn-primary" disabled>Submit</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
