Forgot password link added in login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -137,6 +137,7 @@
 
             {% if isPasswordInvalid %}
             <div><small class="text-danger">Invalid Password</small></div>
+            <div><small class="text-danger"><a href="/reset-password">Forgot Password</a></small></div>
             {% endif %}
           </div>
           <button type="submit" class="btn btn-primary mb-1">Submit</button>
