--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -126,7 +126,7 @@
                 <form action="/reset-password" method="POST">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="phone_number">Entered Registered Phone Number *</label>
+                        <label for="phone_number"><strong>Entered Registered Phone Number *</strong></label>
                         <input type="tel" class="form-control" placeholder="Enter Phone Number" name="phone_number"
                             id="phone" value="{% if phone_number %}{{phone_number}}{% endif %}"
                             pattern="[5-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]" required />
@@ -139,12 +139,12 @@
                     </div>
                     <button type="submit" class="btn btn-primary mb-1">Reset Password</button>
                     <div class="w-100"></div>
-                    <small>
-                        <a href="/register">Register here</a><br>
-                        <a href="/log-in">Log-in here</a>
-                    </small>
                 </form>
                 {% endif %}
+                <small>
+                    <a href="/register">Register here</a><br>
+                    <a href="/log-in">Log-in here</a>
+                </small>
             </div>
         </div>
     </div>
