--- a/templates/test_results_institute.html
+++ b/templates/test_results_institute.html
@@ -41,7 +41,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col">
-                                    {{question.question.question}}
+                                    {{question.question.question|safe}}
                                     {% if question.question.question_image %}
                                     <div class="w-100"></div>
                                     <img class="img-fluid" src="/uploads/{{question.question.question_image}}" alt="">
@@ -66,7 +66,7 @@
                                                     {% endif %} />
                                                 <label class="custom-control-label"
                                                     for="option{{question.question.id}}{{option.option.id}}">
-                                                    {{option.option.option}}
+                                                    {{option.option.option|safe}}
                                                     {% if option.option.is_true %}
                                                     <i class="text-success ml-1 fa fa-check"></i>
                                                     {% endif %}
