--- a/templates/students.html
+++ b/templates/students.html
@@ -1,7 +1,7 @@
 {% extends "nav_institute.html" %} {% block content %}
 <div class="container mb-2">
     <div class="row my-2">
-        <div class="col">
+        <div class="col-auto">
             <input class="form-control" id="myInput" type="text" placeholder="Search..">
         </div>
         <div class="col-auto ml-auto">
