--- a/templates/register.html
+++ b/templates/register.html
@@ -167,7 +167,7 @@
           <div class="form-group">
             <label for="pwd">Password *</label>
             <input oninput="confirmPassword()" type="password" class="form-control" placeholder="Enter password"
-              name="password" id="pwd" required />
+              name="password" id="pwd" minlength="4" required />
           </div>
           <div class="form-group">
             <label for="confirm_pwd">Confirm Password *</label>
