--- a/templates/register.html
+++ b/templates/register.html
@@ -151,8 +151,8 @@
           </div>
           <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" placeholder="Enter email" name="email" id="email"
-              value="{% if email %}{{email}}{% endif %}" />
+            <input type="text" class="form-control" placeholder="Enter email" name="email" id="email"
+              pattern="[A-Za-z]+@[A-Za-z]+.[A-Za-z]+" value="{% if email %}{{email}}{% endif %}" />
             {% if email_exists %}
             <div>
               <small class="text-danger">Email already exists, <a href="/log-in">log-in</a></small>
